# DAGGER

./: .gitignore  README.md  pyproject.toml
docs/: index.html
docs/static/css/: index.css
evaluation/: complexity_vs_tokens.py
evaluation/baselines/: aug_results.py  aug_wise_results.py  original_results.py
evaluation/baselines/augmented/: mgsm_gemma3_cot.py  mgsm_qwen25_cot.py  mgsm_qwen3_cot.py
evaluation/baselines/original/: mgsm_gemma3_cot.py  mgsm_llama3_cot.py  mgsm_qwen25_cot.py  mgsm_qwen3_cot.py  msvamp_gemma3_cot.py  msvamp_llama3_cot.py  msvamp_qwen25_cot.py  msvamp_qwen3_cot.py
evaluation/graph_wo_train/: results.py
evaluation/grpo/: aug_type_results.py  results.py
evaluation/sft/: results.py
gpt_evaluation/: gpt_cot.py  gpt_mgraph.py  gpt_pot.py  graph_eval.py  icls.txt
gpt_evaluation/other_languages/: gpt_cot.py  gpt_mgraph.py  graph_eval.py
hf_cards/datasets/: DistractMath-Bn.md  dagger.md
hf_cards/models/: dagger-12B_GRPO.md  dagger-12B_SFT.md  dagger-12B_SFT_GRPO.md  dagger-4B_GRPO.md  dagger-4B_SFT.md  dagger-4B_SFT_GRPO.md
src/: inference.py  prompt.py
src/eval/: eval.py  helpers.py  merge.py  mgsm_eval.py
src/hf_utils/: push_data.py  push_model.py
src/train/grpo/: grpo.py  grpo_rewards.py
src/train/sft/: sft.py
