[project]
name = "math2gcot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flash-attn>=2.8.3",
    "ipykernel>=7.1.0",
    "jsonlines>=4.0.0",
    "torch>=2.9.0",
    "transformers>=4.57.3",
    "unsloth==2025.12.8",
    "unsloth-zoo>=2025.12.7",
    "vllm==0.12.0",
    "wandb>=0.23.1",
]
